--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "bootstrap": "npx lerna bootstrap -- --ignore-engines",
     "bootstrap-clean": "rm -rf ./node_modules; npx lerna clean --yes && yarn bootstrap",
-    "release": "lerna version && lerna publish from-package"
+    "release": "lerna version && lerna publish from-package --registry https://npm.pkg.github.com"
   },
   "devDependencies": {
     "lerna": "^4.0.0"
