--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@srgssr/rio-eslint-config-react",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Rio ESlint config with react",
   "main": "index.js",
   "keywords": [
@@ -21,6 +21,7 @@
     "directory": "packages/eslint-config-react"
   },
   "peerDependencies": {
+    "@srgssr/rio-eslint-config": "latest",
     "eslint": "^8",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -32,7 +33,7 @@
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.1",
-    "@srgssr/rio-eslint-config": "latest",
     "typescript": ">=4.5.4"
-  }
+  },
+  "gitHead": "d1b4735061ca795e356bf51c795e9d13226a8240"
 }
