--- a/packages/eslint-config-rio/package.json
+++ b/packages/eslint-config-rio/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@srgssr/rio-eslint-config",
-  "version": "1.1.0",
+  "name": "@srgssr/eslint-config-rio",
+  "version": "1.0.0",
   "description": "Rio ESlint config",
   "main": "index.js",
   "keywords": [
@@ -18,7 +18,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/SRGSSR/rio-lint.git",
-    "directory": "packages/eslint-config"
+    "directory": "packages/eslint-config-rio"
   },
   "peerDependencies": {
     "eslint": "^8",
@@ -31,6 +31,5 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.1",
     "typescript": ">=4.5.4"
-  },
-  "gitHead": "d1b4735061ca795e356bf51c795e9d13226a8240"
+  }
 }
