--- a/packages/eslint-config-rio-react/package.json
+++ b/packages/eslint-config-rio-react/package.json
@@ -22,6 +22,8 @@
   },
   "peerDependencies": {
     "@srgssr/eslint-config-rio": "latest",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
     "eslint": "^8",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-airbnb-typescript": "^16.1.0",
