refactor: peer deps versions

--- a/packages/prettier-config-rio/package.json
+++ b/packages/prettier-config-rio/package.json
@@ -21,6 +21,6 @@
     "directory": "packages/prettier-config-rio"
   },
   "peerDependencies": {
-    "prettier": ">=2.5.1"
+    "prettier": "~2.6.0"
   }
 }
