--- a/packages/eslint-config-rio-react/package.json
+++ b/packages/eslint-config-rio-react/package.json
@@ -22,19 +22,19 @@
   },
   "peerDependencies": {
     "@srgssr/eslint-config-rio": "latest",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
+    "@typescript-eslint/eslint-plugin": "^5",
+    "@typescript-eslint/parser": "^5",
     "eslint": "^8",
-    "eslint-config-airbnb": "^19.0.2",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "prettier": "^2.5.1",
-    "typescript": ">=4.5.4"
+    "eslint-config-airbnb": "^19",
+    "eslint-config-airbnb-typescript": "^16",
+    "eslint-config-prettier": "^8",
+    "eslint-import-resolver-node": "^0",
+    "eslint-plugin-import": "^2",
+    "eslint-plugin-jsx-a11y": "^6",
+    "eslint-plugin-prettier": "^4",
+    "eslint-plugin-react": "^7",
+    "eslint-plugin-react-hooks": "^4",
+    "prettier": "^2",
+    "typescript": "~4.5"
   }
 }
