--- a/packages/eslint-config-rio/package.json
+++ b/packages/eslint-config-rio/package.json
@@ -21,17 +21,17 @@
     "directory": "packages/eslint-config-rio"
   },
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
+    "@typescript-eslint/eslint-plugin": "^5",
+    "@typescript-eslint/parser": "^5",
     "eslint": "^8",
-    "eslint-config-airbnb": "^19.0.2",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-node": "^0.3.6",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.1",
-    "typescript": ">=4.5.4"
+    "eslint-config-airbnb": "^19",
+    "eslint-config-airbnb-typescript": "^16",
+    "eslint-config-prettier": "^8",
+    "eslint-import-resolver-node": "^0",
+    "eslint-plugin-import": "^2",
+    "eslint-plugin-jsx-a11y": "^6",
+    "eslint-plugin-prettier": "^4",
+    "prettier": "^2",
+    "typescript": "~4.5"
   }
 }
