--- a/packages/eslint-config-rio-js/package.json
+++ b/packages/eslint-config-rio-js/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@srgssr/eslint-config-rio",
+  "name": "@srgssr/eslint-config-rio-js",
   "version": "1.3.0",
-  "description": "Rio ESlint config",
+  "description": "Rio ESlint config for JavaScript",
   "main": "index.js",
   "keywords": [
     "eslint"
@@ -21,18 +21,13 @@
     "directory": "packages/eslint-config-rio"
   },
   "peerDependencies": {
-    "@srgssr/eslint-config-rio-js": "latest",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
     "eslint": "^8.11.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^16.1.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.6.0",
-    "typescript": "~4.5.5"
+    "prettier": "^2.6.0"
   }
 }
